Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27519

"Run as root user" doesn't work in terminal when debugging

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • Qt Creator 11.0.0-beta2
    • Qt Creator 8.0.0-beta1
    • Debugger
    • None
    • Linux/X11
    • 11ec14ebf (11.0), dd28fb438 (11.0), 43862f4cd (11.0)

      To reproduce:
      1. Check "Run in terminal" and "Run as root user" checkboxes in run settings.
      2. Start debugging. It will popup the ask pass dialog, type it.
      3. Application which is in debug doesn't start with root privileges.

      QtCreator 6.0.2 is ok, bug probably starts from fixing a https://bugreports.qt.io/browse/QTCREATORBUG-26964

        For Gerrit Dashboard: QTCREATORBUG-27519
        # Subject Branch Project Status CR V

            madwinter Marcus Tillmanns
            goodnike Nikolai Krasheninnikov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes