Terminal: Fix setting environment for stub process

The TerminalInterface was setting the environment of the target process
for the stub, this is uneccessary.

The ExternalTerminalProcessImpl was not using the environment
of the stub process which will be important later.

The TerminalProcessImpl was not setting the right environment either.

Task: QTCREATORBUG-27519
Change-Id: I89238feedd755d1f1cbe2255b71711e0d5c149d0